[gd_scene load_steps=5 format=3 uid="uid://dmhkfrc3ph6s8"]

[ext_resource type="Script" path="res://sceans/ui/ui.gd" id="1_w2mcv"]
[ext_resource type="Texture2D" uid="uid://cm727rdojlhnv" path="res://assets/sprites/ammo-progress.png" id="2_u3yhv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_duuwe"]
atlas = ExtResource("2_u3yhv")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbbb1"]
atlas = ExtResource("2_u3yhv")
region = Rect2(0, 16, 16, 16)

[node name="Ui" type="CanvasLayer"]
script = ExtResource("1_w2mcv")

[node name="ui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ui"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="ui/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="ui/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Score" type="Label" parent="ui/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="ui/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ReloadProgress" type="TextureProgressBar" parent="ui/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.1
value = 1.0
fill_mode = 3
texture_under = SubResource("AtlasTexture_duuwe")
texture_progress = SubResource("AtlasTexture_bbbb1")

[node name="menu" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.152941, 0.152941, 0.152941, 0.427451)

[node name="MarginContainer" type="MarginContainer" parent="menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 256
theme_override_constants/margin_right = 256

[node name="VBoxContainer" type="VBoxContainer" parent="menu/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 16
columns = 2

[node name="musicLabel" type="Label" parent="menu/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Music: "

[node name="musicSlider" type="HSlider" parent="menu/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="sfxLabel" type="Label" parent="menu/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "SFX:"

[node name="sfxSlider" type="HSlider" parent="menu/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[connection signal="value_changed" from="menu/MarginContainer/VBoxContainer/GridContainer/musicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="menu/MarginContainer/VBoxContainer/GridContainer/sfxSlider" to="." method="_on_sfx_slider_value_changed"]
